--- a/.github/workflows/cavefish-server-linux-ci.yml
+++ b/.github/workflows/cavefish-server-linux-ci.yml
@@ -1,4 +1,4 @@
-name: Haskell CI
+name: Haskell build and test
 
 on:
   push:
@@ -60,20 +60,6 @@ jobs:
       uses: input-output-hk/actions/base@latest
       with:
         use-sodium-vrf: false # default is true
-
-    - name: Install fourmolu
-      working-directory: ./cavefish-server
-      run: |
-        FOURMOLU_VERSION="0.17.0.0"
-        BINDIR=$HOME/.local/bin
-        mkdir -p "$BINDIR"
-        curl -sSfL "https://github.com/fourmolu/fourmolu/releases/download/v${FOURMOLU_VERSION}/fourmolu-${FOURMOLU_VERSION}-linux-x86_64" -o "$BINDIR/fourmolu"
-        chmod a+x "$BINDIR/fourmolu"
-        echo "$BINDIR" >> $GITHUB_PATH
-
-    - name: Run fourmolu
-      working-directory: ./cavefish-server
-      run: ./scripts/fourmolize.sh
 
     - name: Install Haskell
       id: install-haskell
