Separate the project into sub-project
Separate the project into smaller packages:
- cavefish-client, this will provide support for Light-Client
- cavefish-core, core function/and data reside here
- cavefish-server, this is where Service-Provider modules are
- cavefish-test, for unit/integration tests

--- a/cavefish-server/cabal.project
+++ b/cavefish-server/cabal.project
@@ -1,5 +1,10 @@
 packages:
+  -- remove cavefis
   ./cavefish
+  ./cavefish/src/cavefish-core
+  ./cavefish/src/cavefish-client
+  ./cavefish/src/cavefish-server
+  ./cavefish/src/cavefish-tests
 
 package cardano-crypto-praos
   flags: -external-libsodium-vrf
