Separate the project into sub-project
Remove old project files. Add READMEs to sub-projects

--- a/cavefish-server/cabal.project
+++ b/cavefish-server/cabal.project
@@ -1,10 +1,9 @@
 packages:
   -- remove cavefis
-  ./cavefish
-  ./cavefish/src/cavefish-core
-  ./cavefish/src/cavefish-client
-  ./cavefish/src/cavefish-server
-  ./cavefish/src/cavefish-tests
+  cavefish/core/cavefish-core.cabal
+  cavefish/client/cavefish-client.cabal
+  cavefish/server/cavefish-server.cabal
+  cavefish/tests/cavefish-tests.cabal
 
 package cardano-crypto-praos
   flags: -external-libsodium-vrf
